force-app/main/default/objects/Value_Delivery_Session_Outcomes__c/Value_Delivery_Session_Outcomes__c.object-meta.xml
<CustomObject>
    <label>Value Delivery Session Outcomes</label>
    <nameField>
        <label>Session Outcomes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Delivery Session Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>