force-app/main/default/objects/Value_Delivery_Session_Outcomes__c/fields/Session_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Session_Outcome__c</fullName>
    <label>Session Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>