force-app/main/default/objects/Value_Delivery_Session_Outcomes__c/fields/Session_Owner__c.field-meta.xml
<CustomField>
    <fullName>Session_Owner__c</fullName>
    <label>Session Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>