force-app/main/default/objects/Value_Delivery_Session_Outcomes__c/fields/SessionOwner__c.field-meta.xml
<CustomField>
    <fullName>SessionOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Value_Delivery_Session_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>