force-app/main/default/objects/Value_Delivery_Session_Outcomes__c/fields/Value_Delivery_Session__c.field-meta.xml
<CustomField>
    <fullName>Value_Delivery_Session__c</fullName>
    <label>Value Delivery Session</label>
    <referenceTo>Value_Delivery_Session__c</referenceTo>
    <relationshipName>Session_Outcomes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>